[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.7"
base64 = "0.21.2"
lambda_http = "0.9.0"
imageproc = "0.23.0"
image = "0.24.7"
rusttype = "0.9.3"
rand = "0.8.5"
chrono = "0.4.26"
async-trait = "0.1.73"
# For http_client
reqwest = { version = "0.11.18", default_features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bigdecimal = "0.4"
