[package]
name = "get-usd"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
lambda_http = "0.9.0"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bigdecimal = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
